fixed height issues of Advantages section and spacing of Resources and community section.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1781 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/hds-community.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/hds-community.css
@@ -46,6 +46,8 @@
     font-size: 1rem;
 }
 
+.hds-community-section .hds-community-container .community-common-box br{display:none}
+
 .hds-community-section .hds-community-container .community-common-box{
   background: #ffffff;
   margin:0 0 20px 0; 
